- AcqFrame: fixed autoexposure to consider multicam setup for channel configs - updated RoiFinder + ScriptAnalyzer